--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,10 +22,16 @@
     <string name="type_of_exercise">Tipo di esercizio</string>
     <string name="type_of_movement">Tipo di movimento</string>
     <string name="your_workouts">I tuoi workout</string>
+    <string name="your_exercises">I tuoi esercizi</string>
     <string name="fab_add">Aggiungi</string>
     <string name="fab_close">Chiudi</string>
     <string name="fab_add_new_workout">Aggiungi nuovo workout</string>
     <string name="fab_add_new_exercise">Aggiungi nuovo esercizio</string>
+    <string name="workouts_page_title">Allenamenti</string>
+    <string name="exercises_page_title">Esercizi</string>
+    <string name="stats_page_title">Statistiche</string>
+    <string name="progress_page_title">Progressi</string>
+    <string name="add_new_workout">Aggiungi nuovo workout</string>
     <string-array
         name="muscle_groups">
         <item>@string/neck</item>
