--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="save">Salva</string>
     <string name="remove_set">Rimuovi set</string>
     <string name="tempo_sec">Tempo(sec)</string>
+    <string name="your_progress">I tuoi progressi</string>
     <string-array
         name="muscle_groups">
         <item>@string/neck</item>
